--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "./node_modules/.bin/mocha --recursive --reporter spec"
   },
   "dependencies": {
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "express-load": "^1.1.15",
-    "jade": "*",
-    "string-validator": "^1.0.5",
+    "is-my-json-valid": "^2.13.1",
+    "mongoose": "^4.5.4"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
