--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mockery": "^1.7.0",
     "should": "^8.3.0",
     "sinon": "^1.17.4",
+    "sinon-stub-promise": "^2.1.0",
     "supertest": "^1.2.0"
   }
 }
