--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "./node_modules/.bin/mocha --recursive --reporter spec"
   },
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
