--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.4",
     "express-load": "^1.1.15",
     "is-my-json-valid": "^2.13.1",
+    "jsonwebtoken": "^7.1.3",
     "mongoose": "^4.5.4"
   },
   "devDependencies": {
